--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.0",
-    "jade": "~1.11.0",
     "mongodb": "^4.4.0",
     "monk": "^7.3.0",
     "morgan": "~1.6.1",
+    "pug": "^3.0.3",
     "sass": "^1.81.0",
     "serve-favicon": "~2.3.0"
   },
