--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MYSQL_DATABASE=your_db_name
 MYSQL_USER=your_db_user
 MYSQL_PASSWORD=your_db_pass
 MYSQL_ROOT_PASSWORD=your_db_root_pass
+env=development
