--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "N8Home",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "build-css": "sass public/stylesheets/",
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.13.1",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.0",
-    "mongodb": "^4.4.0",
-    "monk": "^7.3.0",
-    "morgan": "~1.6.1",
-    "pug": "^3.0.3",
-    "sass": "^1.81.0",
-    "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {
-    "express-livereload": "0.0.24"
-  }
+    "name": "N8Home",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "build-css": "sass public/stylesheets/",
+        "start": "node ./bin/www",
+        "dev": "nodemon ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "^1.20.3",
+        "cookie-parser": "^1.4.7",
+        "debug": "^4.3.7",
+        "express": "^4.21.1",
+        "mongodb": "^6.11.0",
+        "monk": "^7.3.0",
+        "morgan": "^1.10.0",
+        "pug": "^3.0.3",
+        "sass": "^1.81.0",
+        "serve-favicon": "^2.5.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.7"
+    }
 }
