--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ MYSQL_USER=your_db_user
 MYSQL_PASSWORD=your_db_pass
 MYSQL_ROOT_PASSWORD=your_db_root_pass
 env=development
+MONGO_URI=mongodb://mongo:27017/mechdesign
