--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,14 @@ services:
             - /usr/src/app/node_modules # Exclude node_modules directory from being overwritten
         depends_on:
             - db # Ensure MySQL starts before the Node.js app
+            - mongo # Ensure MongoDB starts before the Node.js app
         environment:
             MYSQL_HOST: ${MYSQL_HOST}
             MYSQL_DATABASE: ${MYSQL_DATABASE}
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-        command: npm run dev # or comment out for prod
+            MONGO_URI: mongodb://mongo:27017/mechdesign
+        command: npm run dev # Use nodemon for development
 
     db:
         image: mysql:8.0 # Use MySQL 8.0
@@ -32,5 +34,15 @@ services:
             - db_data:/var/lib/mysql
             - ./db-init-scripts:/docker-entrypoint-initdb.d # Seed database
 
+    mongo:
+        image: mongo:latest
+        container_name: mongo-container
+        ports:
+            - "27017:27017"
+        volumes:
+            - mongo_data:/data/db
+            - ./mongo-init-scripts:/docker-entrypoint-initdb.d # Seed database
+
 volumes:
     db_data:
+    mongo_data:
